add footer&section hero

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,10 +1,16 @@
-@import "colors";
-@import "_fonts";
-@import "header";
-@import "portfolio";
-@import "lorem";
-@import "news";
-@import "brands";
-@import "bio";
-@import "footer";
-@import "media__query";
+@import 'colors';
+@import '_fonts';
+@import 'header';
+@import 'hero';
+@import 'lorem';
+@import 'news';
+@import 'brands';
+@import 'bio';
+@import 'footer';
+@import 'media__query';
+
+html,
+body {
+  box-sizing: border-box;
+  background: #000;
+}
