--- a/src/styles/_fonts.less
+++ b/src/styles/_fonts.less
@@ -1,20 +1,3 @@
-//@font-face {
-//  font-family: 'PTSerif';
-//  src: url(../fonts/PTSerifCaption/PTSerifCaptionRegular/PTSerifCaptionRegular.ttf);
-//}
-//@font-face {
-//  font-family: 'Roboto_Regular';
-//  src: url(../fonts/roboto_regular.ttf);
-//}
-//@font-face {
-//  font-family: 'Roboto-Bold';
-//  src: url(../fonts/Roboto/Roboto-Bold.ttf);
-//}
-//@font-face {
-//  font-family: 'FiraSans-Bold';
-//  src: url(../fonts/fira-sans/FiraSans-Bold.ttf);
-//}
-
 @font-face {
   font-family: 'SantEliaScriptBoldDEMO';
   src: url(../fonts/SantEliaScriptBoldDEMO.otf);
@@ -41,7 +24,7 @@
 }
 @font-face {
   font-family: 'h1';
-  src: 'https://fonts.googleapis.com/css?family=Lato:300,400,700'
+  src: 'https://fonts.googleapis.com/css?family=Lato:300,400,700';
 }
 
 .h1__textFont() {
@@ -72,4 +55,10 @@
 @font-face {
   font-family: 'OpenSansBold';
   src: url(../fonts/open-sans/OpenSans-Bold.ttf);
+}
+
+/////////////////////
+@font-face {
+  font-family: 'jsMath-cmr10';
+  src: url(../fonts/jsMath-cmr10/jsMath-cmr10.ttf);
 }
