add main sections

--- a/src/styles/_fonts.less
+++ b/src/styles/_fonts.less
@@ -58,7 +58,23 @@
 }
 
 /////////////////////
+@import url('https://fonts.googleapis.com/css2?family=Onest:wght@100..900&display=swap');
+
+
+
 @font-face {
   font-family: 'jsMath-cmr10';
   src: url(../fonts/jsMath-cmr10/jsMath-cmr10.ttf);
 }
+
+// @font-face {
+//   font-family: 'onest';
+//   src: url(../fonts/onest/TTF/OnestRegular1602-hint.ttf);
+// }
+
+@font-face {
+  font-family: 'onestBold';
+  src: url(../fonts/onest/TTF/OnestExtraBold1602-hint.ttf);
+}
+
+
