--- a/src/styles/header.less
+++ b/src/styles/header.less
@@ -16,11 +16,16 @@
   }
 }
 .contact-us a {
-  font-family:  --main-font-family;
-  color: #fff;
+  font-family:  'Onest';
+  font-size: 14px;
+  font-weight: 700;
+ 
+  color: #979595;
   border: 1px solid;
   cursor: pointer;
+  text-transform: uppercase;
+  padding: 5px 15px;
   &:hover {
-    color: darken(#fff, 30%);
+    color: lighten(#979595, 30%);
   }
 }
