--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -2,12 +2,14 @@
 @import '_fonts';
 @import 'header';
 @import 'hero';
-@import 'lorem';
-@import 'news';
-@import 'brands';
-@import 'bio';
+@import 'insights';
+@import 'services';
+@import 'mission';
+@import 'integration';
 @import 'footer';
 @import 'media__query';
+@import 'whychooseus';
+@import 'calltous';
 
 html,
 body {
