add first layout

--- a/src/styles/mission.less
+++ b/src/styles/mission.less
@@ -1,6 +1,6 @@
 
-@main-color: #df2027;
-@main-text-color: #fff;
+//@main-color: #df2027;
+//@main-text-color: #fff;
 
 .mission {
   position: relative;
@@ -27,10 +27,14 @@
     color: @main-text-color;
     text-align: center;
     padding: 15px 0;
+    width: 100%;
+    max-width: 50%;
+    margin: 0 auto;
   }
 }
 .finger {
   text-align: center;
+  margin-top: 15px;
   img {
     width: 10%;
   }
