--- a/src/styles/services.less
+++ b/src/styles/services.less
@@ -2,8 +2,8 @@
   --main-font-family: 'jsMath-cmr10', sans-serif;
 }
 
-@main-color: #df2027;
-@main-text-color: #fff;
+//@main-color: #df2027;
+//@main-text-color: #fff;
 
 
 .services {
