--- a/src/styles/insights.less
+++ b/src/styles/insights.less
@@ -2,8 +2,8 @@
   --main-font-family: 'Onest', sans-serif;
 }
 
-@main-color: #df2027;
-@main-text-color: #fff;
+//@main-color: #df2027;
+//@main-text-color: #fff;
 
 .insights {
   position: relative;
