--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -10,9 +10,12 @@
 @import 'media__query';
 @import 'whychooseus';
 @import 'calltous';
+@import 'industriesweserve';
+@import 'aboutus';
 
 html,
 body {
   box-sizing: border-box;
   background: #000;
+  border: none!important;
 }
