--- a/src/styles/media__query.less
+++ b/src/styles/media__query.less
@@ -1,305 +1,192 @@
-/* SMARTPHONES (portrait and landscape) ----------- */
-@media only screen and (max-width: 480px) {
-  .row {
-    margin: 0;
-    padding: 0;
+// insights section
+/* Media Query for Tablets (768px and below) */
+@media (max-width: 768px) {
+  #insights {
+    padding: 30px;
   }
-  .tittle__header, .logo {
-    //display: none;
-  }
-  .logo {
-    padding-left: 15px;
-  }
-  .header__bottomContainer {
-    margin: 0 auto;
-    display: flex;
-    align-items: center
-  }
-  .navbar__btn {
-    .open__icon {
-      position: absolute!important;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%) rotate(135deg);
-      transition: transform 0.5s;
-    }
-    display: block;
-    padding-right: 15px;
-    position: absolute;
-    transform: translate(-50%, 50%);
-    right: 0;
-    //top: 7px;
-    background: none;
-    border: none;
-    color: #fff;
-    font-size: 30px;
-    z-index: 2;
-    //width: 30px;
-    //height: 30px;
-  }
-  .navbar__btnOpen {
-    .open__icon {
-      transform: rotate(0) translate(-50%, -50%) ;
-    }
-  }
-  .navbarHeader__bottom {
-    min-height: 45px;
-    height: auto;
-    position: relative;
-  }
-  .navbar__headerLogo {
-    display: flex;
+
+  .insights-list {
+    flex-direction: column;
     align-items: center;
-    /* height: 100%; */
-    width: 100%;
-    
   }
-  .nav__menu {
-    height: 100%;
-    width: 100%;
-    display: inline-block;
-    &:before {
-      display: none;
-    }
-  }
-  .nav__menu li {
-    &:first-child {
-      //margin-top: 5em;
-    }
-    display: block;
-    width: 100%;
-    text-align: left;
-    padding-left: 15px;
-  }
-  .navbar__menuHeader {
-    max-height: 0;
-    height: 100%;
-    width: 100%;
-    //padding: 10px;
-    transition: .5s,.5s,.5s max-height, right, opacity;
-    overflow: hidden;
-    opacity: 0;
-    position: relative;
-    //right: -1000px; якщо зробити появлення блоку з права тоді появляється скрол//
-  }
-  .open__menuHeader {
-    max-height: 900px!important;
-    right: 0;
-    opacity: 1;
-  }
-  .nav__icons {
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    text-align: justify;
-    font-size: 0;
+
+  .insights-list > li {
     margin: 20px 0;
-    padding: 0 10px;
-    &:after {
-      content: '';
-      display: inline-block;
-      width: 100%;
-    }
-  }
- //portfolio
-  .socialImg__icons {
-    padding: 0 5px;
-    bottom: -20px;
-    &:after {
-      content: '';
-      width: 100%;
-      display: inline-block;
-    }
-  li {
-    padding: 0;
-  }
-    img {
-      width: 10px;
-
-    }
-  }
-  .img__searchHover {
-    width: 20px;
   }
 
- //lorem
- .lorem {
-   height: 400px;
- }
-  .poem {
-    font-size: 8px;
-    span {
-      font-size: 10px;
-    }
-  }
-  .crawl {
-    position: relative;
-    top: 9999px;
-    transform-origin: 50% 100%;
-    animation: crawl 60s linear infinite;
-  }
-  .what-i-do {
-    font-size: 50px;
-    line-height: 1.5;
-  }
-  .star-wars {
-    height: 200px;
-  }
- //news
-  .tags__column {
-    margin-bottom: 30px;
+  .counter-text {
+    text-align: center;
+    font-size: 16px;
   }
 
-//brands
-  .list__brands li {
-    display: block;
+  .counter {
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+  }
+
+  .counter-value {
+    font-size: 28px;
+  }
+}
+
+/* Media Query for Mobile Devices (480px and below) */
+@media (max-width: 480px) {
+  #insights {
     padding: 20px;
-    text-align: center;
   }
-//bio
-  .tittle__abouteMe {
-    text-align: center;
-  }
-  .col__tittleAbouteMe {
-    margin-bottom: 40px;
-  }
-  .social-link {
-    .social-svg {
-      //width: 4.8rem;
-      width: 4em;
-      height: 4em;
+  .insights-list {
+    padding: 0;
+    li {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
   }
-  .wrapper__links {
-    width: 100%!important;
-    justify-content: space-evenly;
-  }
-  .additional__info {
-    display: none;
-  }
- 
 
-//footer
-  .mail {
-    .btnMail {
-      padding: 15px 30px;
-      font-size: 20px;
-    }
+  .insights-text {
+    font-size: 30px!important;
+    text-align: center;
   }
-  .info__namber {
-    font-size: 40px;
-    a {
-      color: white;
-    }
+  .counter {
+    padding: 0;
+    flex-direction: column!important;
+    align-items: center;
   }
-  .adress {
+
+  .counter-text {
+    font-size: 14px;
+    //max-width: 100%!important;
+  }
+
+  .counter-value {
+    font-size: 24px;
+  }
+
+  .counter li {
+    text-align: center;
+  }
+}
+
+// services
+/* Media Query for Tablets (768px and below) */
+/* For tablets (768px and below) */
+@media (max-width: 768px) {
+  .services-lit li {
+    flex-direction: column; /* Stack text and image vertically */
+    align-items: center;
+    text-align: center;
+  }
+
+  .services-lit li div {
+    margin-bottom: 20px;
+  }
+}
+
+/* For mobile (480px and below) */
+@media (max-width: 480px) {
+  .services-lit li h3 {
     font-size: 20px;
   }
-  .right {
-    font-size: 12px;
+
+  .services-lit li p {
+    font-size: 14px;
+    line-height: 1.5;
+  }
+
+  .services-lit li img {
+    max-width: 90%; /* Reduce image size for smaller screens */
   }
 }
-//481 to 991 px
-@media screen and (max-width: 991px) and (min-width: 481px) {
-  .row {
-    margin: 0;
-  }
-  .navbar__btn {
-    display: none;
-  }
-  .tittle__header {
-    //display: none;
-  }
-  .nav__icons {
-    display: none;
-  }
-  .socialImg__icons {
-    padding: 0 5px;
-    bottom: -20px;
-    &:after {
-      content: '';
-      width: 100%;
-      display: inline-block;
+
+
+// get started
+@media (max-width: 480px) {
+  #contactus {
+    p {
+      max-width: 100%;
+      text-align: justify;
+      padding: 15px;
     }
-    li {
-      padding: 0;
+  }
+
+}
+
+// H2
+@media (max-width: 480px) {
+  h2 {
+    font-size: 30px!important;
+  }
+}
+
+// mission
+@media (max-width: 480px) {
+  #mission {
+    p {
+      max-width: 100%;
+      text-align: justify;
+      padding: 15px;
     }
+  }
+
+}
+
+// hero section
+@media (max-width: 388px) {
+  .hero-svg-right-top,
+  .hero-svg-left-top,
+  .hero-svg-right-bottom,
+  .hero-svg-left-bottom {
+    width: 30px!important;
+    -webkit-width: 40px; /* Webkit-specific prefix */
+  }
+} 
+@media (max-width: 390px) {
+  .hero-svg-right-top,
+  .hero-svg-left-top,
+  .hero-svg-right-bottom,
+  .hero-svg-left-bottom {
+    width: 45px!important;
+    -webkit-width: 40px; /* Webkit-specific prefix */
+  }
+}
+@media (max-width: 480px) {
+  .hero-section {
+    height: 50vh;
+  }
+  .phoenix {
+    opacity: 1;
+  }
+  .label {
+    font-size: 1rem;
+    -webkit-font-size: 1rem; /* Webkit-specific prefix */
+  }
+  .hero-svg-right-top,
+  .hero-svg-left-top,
+  .hero-svg-right-bottom,
+  .hero-svg-left-bottom {
+    width: 57px;
+    -webkit-width: 57px; /* Webkit-specific prefix */
+  }
+  .hero-title {
+    font-size: 2.5rem;
+    -webkit-font-size: 2.5rem; /* Webkit-specific prefix */
+  }
+  .hero-subtitle {
+    font-size: 1.5rem;
+    -webkit-font-size: 1.5rem; /* Webkit-specific prefix */
+  }
+}
+
+/* Mobile-specific styles (iPhone fix) */
+@media (max-width: 768px) {
+  .nav-logo {
+    width: 30%;
     img {
-      width: 10px;
-
+      width: 100% !important;
+      -webkit-width: 100% !important; /* Webkit-specific prefix */
     }
   }
-  .navbar__menuHeader {
-    justify-content: flex-end;
-  }
-  .img__searchHover {
-    width: 20px;
-  }
-  .poem {
-    top: 30%;
-  }
-  .tags__column {
-    padding: 0 15px;
-  }
-  .brands__store {
-    padding: 0 20px;
-  }
-  .tittle__abouteMe {
-    text-align: center;
-  }
-  .biography__story {
-    margin-bottom: 30px;
-    padding: 0 10px;
-  }
-  .info__namber {
-    font-size: 40px;
-  }
-  .mail {
-    .btnMail {
-      font-size: 40px;
-      padding: 20px 40px;
-    }
-  }
-  // .social-link {
-  //   .social-svg {
-  //     width: 1.8rem;
-  //   }
-  // }
 }
 
-////771 to 831px
-//@media screen and (max-width: 831px) and (min-width: 771px) {}
-////from 832px to 931px
-//@media screen and (max-width: 931px) and (min-width: 832px) {}
-//this is options for ipad
-@media screen and (max-width: 1100px) and (min-width: 992px) {
-  //header
-  .navbar__btn {
-    display: none;
-  }
-  //lorem
-  .poem {
-    top: 30%;
-  }
-  // .social-link {
-  //   .social-svg {
-  //     width: 1.8rem;
-  //   }
-  // }
-}
-@media (min-width: 1101px){
-  .navbar__btn {
-    display: none;
-  }
-}
-@media only screen and (min-width: 1101px) {
-  // .social-link {
-  //   .social-svg {
-  //     width: 1.8rem;
-  //   }
-  // }
-}
-////1101 to 1365px
-//@media screen and  (max-width: 1365px) and (min-width: 1101px) {}
-// from 1366px to ALL
-//@media (min-width: 1366px){};
+
