--- a/src/styles/services.less
+++ b/src/styles/services.less
@@ -36,6 +36,7 @@
 .services-lit {
   font-family: 'Onest';
   padding: 30px 0;
+  text-align: center;
   li {
     list-style: none;
     display: flex;
