--- a/src/styles/calltous.less
+++ b/src/styles/calltous.less
@@ -1,6 +1,6 @@
 //@main-color: #d93434;
 //@main-text-color: #fff;
-@main-text-color: #f2f2f2;
+//@main-text-color: #f2f2f2;
 
 
 .call-to-action {
@@ -25,7 +25,7 @@
     font-weight: bold;
     margin-bottom: 1rem;
   }
-  h3 {
+  h3.calltous-title {
     width: 100%;
     max-width: 50%;
     margin: 0 auto;
