--- a/src/styles/footer.less
+++ b/src/styles/footer.less
@@ -24,6 +24,7 @@
 .footer-brand {
   flex: 1 1 250px;
   text-align: center;
+  text-decoration: none;
   img {
     width: 40%;
     margin-bottom: 10px;
