--- a/src/styles/services.less
+++ b/src/styles/services.less
@@ -33,7 +33,7 @@
   }
 }
 
-.services-lit {
+.services-list {
   font-family: 'Onest';
   padding: 30px 0;
   text-align: center;
@@ -57,5 +57,12 @@
     color: @main-text-color;
     text-align: justify;
     padding: 15px;
+    a {
+      color: @main-color;
+      text-decoration: none;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
   }
 }
