fix font weight

--- a/src/styles/calltous.less
+++ b/src/styles/calltous.less
@@ -67,7 +67,7 @@
 
 .call-to-action h2 {
   font-size: 45px;
-  font-weight: bold;
+  //font-weight: bold;
   margin-bottom: 1rem;
 }
 
@@ -87,10 +87,11 @@ h3.calltous-title {
   max-width: 80%;
   margin: 0 auto;
   text-align: justify;
+  font-weight: 200;
 }
 
 .p-sub {
-  font-weight: 600;
+  font-weight: 500!important;
   text-align: center !important;
   margin-bottom: 15px !important;
 }
