--- a/src/styles/whychooseus.less
+++ b/src/styles/whychooseus.less
@@ -8,6 +8,7 @@
     background-color: #1a1a1a;
     color: @main-text-color;
     text-align: center;
+    font-family: 'Onest';
   }
   
   .why-choose-us h2 {
@@ -54,6 +55,7 @@
     font-size: 1rem;
     color: #cccccc;
     line-height: 1.6;
+    font-weight: 200;
   }
   
   /* Hover Effect */
