--- a/src/styles/aboutus.less
+++ b/src/styles/aboutus.less
@@ -1,30 +1,107 @@
+// .aboutus {
+//     position: relative;
+// 	padding: 6rem 0;
+//     margin: 40px 0;
+//     //     &::after {
+//     //     content: '';
+//     //     width: 50%;
+//     //     border-bottom: solid 3px #1f1f1f;
+//     //     position: absolute;
+//     //     left: 23%;
+//     //     top: 0px;
+//     //     z-index: 999;
+//     //   }
+//     h2 {
+//         font-family: 'Onest';
+//         color: @main-color;
+//         font-size: 45px;
+//         text-align: center;
+//     }
+//     p {
+//         color: @main-text-color;
+//         text-align: justify;
+//         //padding: 15px 0;
+//         width: 100%;
+//         max-width: 80%;
+//         margin: 0 auto;
+//     }
+
+
+// }
+
 .aboutus {
+    font-family: 'Onest';
     position: relative;
-	padding: 6rem 0;
-    margin: 30px 0;
-        &::after {
-        content: '';
-        width: 50%;
-        border-bottom: solid 3px #1f1f1f;
-        position: absolute;
-        left: 23%;
-        top: 0px;
-        z-index: 999;
-      }
-    h2 {
-        font-family: 'Onest';
-        color: @main-color;
-        font-size: 45px;
-        text-align: center;
+    padding: 6rem 0;
+    margin: 40px 0;
+    //background: linear-gradient(135deg, rgba(255, 126, 95, 0.1), rgba(217, 52, 52, 0.1));
+    text-align: center;
+    opacity: 0;
+    transform: translateY(20px);
+    animation: fadeIn 1s ease-in-out forwards;
+  }
+  
+  .aboutus h2 {
+    font-family: 'Onest';
+    color: @main-color;
+    font-size: 45px;
+    text-align: center;
+    position: relative;
+    display: inline-block;
+  }
+  
+  .aboutus h2::after {
+    content: '';
+    display: block;
+    width: 50%;
+    height: 3px;
+    background-color: @main-color;
+    margin: 10px auto 0;
+  }
+  
+  .aboutus-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .aboutus-image {
+    width: 50%;
+    max-width: 400px;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  .aboutus p {
+    color: @main-text-color;
+    text-align: justify;
+    font-size: 18px;
+    line-height: 1.8;
+    max-width: 70%;
+    margin: 20px auto;
+    padding: 0 15px;
+    line-height: 27px;
+    font-weight: 200;
+  }
+  
+  @media (min-width: 768px) {
+    .aboutus-content {
+      flex-direction: row;
+      gap: 20px;
+      text-align: left;
     }
-    p {
-        color: @main-text-color;
-        text-align: justify;
-        //padding: 15px 0;
-        width: 100%;
-        max-width: 80%;
-        margin: 0 auto;
+  
+    .aboutus-image {
+      margin: 0;
+      width: 40%;
     }
-
-
-}
+  }
+  
+  @keyframes fadeIn {
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
