--- a/src/styles/industriesweserve.less
+++ b/src/styles/industriesweserve.less
@@ -1,16 +1,17 @@
 .industriesweserve {
     position: relative;
 	  padding: 3rem 0;
-    margin: 30px 0;
-    // &::after {
-    //     content: '';
-    //     width: 50%;
-    //     border-bottom: solid 3px #1f1f1f;
-    //     position: absolute;
-    //     left: 23%;
-    //     top: 0px;
-    //     z-index: 999;
-    //   }
+    margin: 40px 0;
+    font-family: 'Onest';
+    &::after {
+        content: '';
+        width: 50%;
+        border-bottom: solid 3px #1f1f1f;
+        position: absolute;
+        left: 23%;
+        top: 0px;
+        z-index: 999;
+      }
       h2 {
         font-family: 'Onest';
         color: @main-color;
@@ -25,6 +26,8 @@
         width: 100%;
         max-width: 80%;
         margin: 0 auto;
+        font-size: 18px;
+        font-weight: 200;
       }
 
 }
