--- a/src/styles/mission.less
+++ b/src/styles/mission.less
@@ -6,7 +6,7 @@
   position: relative;
 	padding: 2rem 0;
   margin: 30px 0;
-
+  font-family: 'Onest';
   &::after {
     content: '';
     width: 50%;
@@ -30,6 +30,7 @@
     width: 100%;
     max-width: 50%;
     margin: 0 auto;
+    font-weight: 200;
   }
 }
 .finger {
