--- a/src/styles/services.less
+++ b/src/styles/services.less
@@ -57,6 +57,7 @@
     color: @main-text-color;
     text-align: justify;
     padding: 15px;
+    font-weight: 200;
     a {
       color: @main-color;
       text-decoration: none;
