--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -1,11 +1,11 @@
-<footer class="footer">
+<footer class="footer" id="footer">
     <div class="footer-container">
       <!-- Quick Links -->
       <div class="footer-links">
         <h4>Quick Links</h4>
         <ul>
           <li><a href="#services">Our Services</a></li>
-          <li><a href="#whychooseus">Why Choose Us</a></li>
+          <li><a href="#calltoaction">Why Choose Us</a></li>
           <li><a href="#contactus">Contact Us</a></li>
           <li><a href="#terms">Terms of Service</a></li>
           <li><a href="#aboutus">About Us</a></li>
