--- a/src/styles/header.less
+++ b/src/styles/header.less
@@ -65,12 +65,12 @@
 }
 
 .btn-primary {
-  background-color: #ff4d4d;
+  background-color: @main-color;
   border: none;
 }
 
 .btn-primary:hover {
-  background-color: #e63939;
+  background-color: darken(@main-color, 10%);;
 }
 .close-icon {
   position: absolute;
