--- a/src/styles/industriesweserve.less
+++ b/src/styles/industriesweserve.less
@@ -1,7 +1,7 @@
 .industriesweserve {
     position: relative;
 	  padding: 3rem 0;
-    margin: 40px 0;
+    margin: 40px 0 160px;
     font-family: 'Onest';
     &::after {
         content: '';
@@ -29,5 +29,17 @@
         font-size: 18px;
         font-weight: 200;
       }
+      .section-img {
+        text-align: center;
+        img {
+          border-radius: 20px;
+        }
+      }
 
 }
+@media (max-width: 768px) {
+  .Industries {
+    padding: 0!important;
+  }
+}
+
