--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -12,10 +12,15 @@
 @import 'calltous';
 @import 'industriesweserve';
 @import 'aboutus';
+@import 'dataCollection';
+
 
 html,
 body {
   box-sizing: border-box;
   background: #000;
   border: none!important;
+}
+html {
+  scroll-behavior: smooth;
 }
