--- a/src/styles/calltous.less
+++ b/src/styles/calltous.less
@@ -36,7 +36,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(135deg, rgba(255, 126, 95, 0.1), rgba(217, 52, 52, 0.9));
+  background: linear-gradient(135deg, rgba(255, 126, 95, 0.1), rgba(230, 81, 42, 0.9));
   z-index: 1;
 }
 
@@ -51,7 +51,7 @@
   margin-top: 20px;
   padding: 10px 20px;
   background-color: #ffffff;
-  color: #d93434;
+  color: @main-color;
   text-decoration: none;
   border-radius: 5px;
   transition: background-color 0.3s ease, color 0.3s ease;
@@ -60,7 +60,7 @@
 }
 
 .call-to-action .btn-primary:hover {
-  background-color: #d93434;
+  background-color: @main-color;
   color: #ffffff;
 }
 // end parallax effect
@@ -122,7 +122,7 @@ hr {
 
 .call-to-action .btn-primary:hover {
   background-color: #f2f2f2;
-  color: #ff1c1c;
+  color: darken(@main-color, 10%);
   transform: translateY(-2px);
   /* Subtle hover effect */
 }
